frontend/web/style/style.css
@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Montserrat&display=swap');

html, body {
    margin: 0;
}

body {
    margin: 32px;
    box-sizing: border-box;
    background-color: #111;
    color: white;
    font-family: 'Montserrat', sans-serif;
    --color-main: #5d79ff
}
body, .section {
    display: inline-flex;
    flex-direction: column;
}

h1 {
    font-family: 'Arvo', serif;
    margin-top: 0;
    color: var(--color-main);
}

button, .file-upload {
    color: black;
    background-color: #ddd;
    border-radius: 4px;
    padding: 4px 6px;
    font: inherit;
    font-weight: bold;
    cursor: pointer;
    width: fit-content;
}
button:hover, .file-upload:hover {
    background-color: white;
}
button:active, .file-upload:active {
    background-color: #bbb;
}

input, button {
    outline: none;
    border: none;
}

input {
    font: inherit;
    background: none;
    border-bottom: 1px solid #ccc;
    color: white;
}
input:hover {
    border-color: white;
}

input[type="file"] {
    display: none;
}

input[type=range] {
    vertical-align: bottom;
    appearance: none;
    height: 2px;
    background: #ccc;
    border: none;
    cursor: pointer;
    border-radius: 100px;
}
input[type=range]::-webkit-slider-thumb {
    appearance: none;
    width: 16px;
    height: 16px;
    border-radius: 50%;
    background-color: var(--color-main);
}
.section input[type=range] + span {
    display: block;
    text-align: end;
    width: 32px;
    margin-right: 5px;
}

span {
    display: flex;
    align-items: center;
}

#url {
    min-width: 350px;
}

.section {
    border: 2px solid white;
    padding: 12px;
    margin-bottom: 16px;
    /* border-radius: 0 32px 0 0; */
}
.section > h2 {
    font-family: 'Arvo', serif;
    margin-top: 0;
}
.section > span:not(:last-child) {
    margin-bottom: 8px;
}

span > * {
    margin-left: 8px;
}

#audioControls {
    border: 2px solid white;
    display: flex;
    align-items: center;
    border-radius: 1000px;
    padding: 4px;
    /* grid-template-columns: min-content min-content auto min-content min-content; */
}

#audioControls > span {
    display: block;
    width: 200px;
    margin: 0 8px;
}
#audioControls > span:first-of-type {
    text-align: end;
}

#playButton {
    border: 2px solid white;
    border-radius: 50%;
    min-width: 32px;
    min-height: 32px;
    color: white;
    opacity: 0.7;
    background: url('play.svg') no-repeat scroll center center;
}
#playButton.playing {
    background-image: url('pause.svg');
}
#playButton:hover {
    opacity: 1;
}

#time {
    width: 100%;
}

